--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "site-lisp/async"]
 	path = site-lisp/async
 	url = https://github.com/jwiegley/emacs-async.git
+[submodule "site-lisp/paket.el"]
+	path = site-lisp/paket.el
+	url = https://github.com/zzdtri/paket.el.git
